--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -187,11 +187,11 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(2) {
-	background: url("../images/large/bud-bg-large.jpg") 50% 0 no-repeat fixed;
+	background: url("../images/large/cover.jpg") 50% 0 no-repeat fixed;
 }
 
 #home-slides div:nth-of-type(3) {
-	background: url("../images/large/par-bg-large.jpg") 50% 0 no-repeat fixed;
+	background: url("../images/large/cover.jpg") 50% 0 no-repeat fixed;
 }
 
 #home-slides div:nth-of-type(3) p {
