--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -178,7 +178,7 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(1) {
-	background: url("../images/Demo_Images/main_ad_SumLB_summer_crush_061214.jpg") 50% 0 no-repeat fixed;
+	background: url("../images/Demo_Images/Cover_a_blurred.tif") 50% 0 no-repeat fixed;
 }
 
 /* changes colour of link because of blue bg */
