--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -43,7 +43,7 @@ body {
 
 ::-moz-selection {
 	background: #555;
-	color: #fff;
+	color: #000000;
 	text-shadow: none;
 }
 
@@ -178,7 +178,7 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(1) {
-	background: url("../images/Large/141014566_CL_Booklet_8_Spread_2.jpg") 50% 0 no-repeat fixed;
+	background: url("../images/Large/cover.jpg.jpg") 50% 0 no-repeat fixed;
 }
 
 /* changes colour of link because of blue bg */
