--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -178,7 +178,7 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(1) {
-	bbackground: url("../images/large/141014566_CL_Booklet_8_Spread_3.jpg") 50% 0 no-repeat fixed;
+	bbackground: url("../images/large/cover.jpg") 50% 0 no-repeat fixed;
 }
 
 #home-slides div:nth-of-type(2) {
