--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -189,7 +189,7 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(3) {
-	background: url("../images/large/141014566_CL_Booklet_8_Spread_4.jpg") 50% 0 no-repeat fixed;
+	background: url("../images/large/Mockup.jpg") 50% 0 no-repeat fixed;
 }
 
 #home-slides div:nth-of-type(3) p {
