--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -166,7 +166,7 @@ ul li, ol li {
 	position: absolute;
 	display: inline;
 	top: 35%;
-	left: 10%;
+	left: 78px;
 	width: 800px;
 	z-index: 4;
 	text-shadow: 0 0 11px rgba(255,255,255,0.6);
@@ -195,7 +195,7 @@ ul li, ol li {
 #home-slides div:nth-of-type(3) p {
 	color: #FFFFFF;
 	font-style: normal;
-	font-size: 9px;
+	font-size: 100%;
 }
 
 /*** CONTENT ***/
