--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -193,7 +193,7 @@ ul li, ol li {
 }
 
 #home-slides div:nth-of-type(3) p {
-	color: #FFFFFF;
+	color: #040404;
 	font-style: normal;
 	font-size: 200%;
 }
