--- a/scrollr/style/style.css
+++ b/scrollr/style/style.css
@@ -147,7 +147,7 @@ ul li, ol li {
 /* the div that has the slides */
 #home-slides {
 	font-weight: 100;
-	font-size: 5em;
+	font-size: 4em;
 	line-height: 1em;
 }
 
@@ -165,16 +165,16 @@ ul li, ol li {
 #home-slides p {
 	position: absolute;
 	display: inline;
-	top: 35%;
-	left: 78px;
+	top: 14%;
+	left: 12px;
 	width: 800px;
 	z-index: 4;
-	text-shadow: 0 0 11px rgba(255,255,255,0.6);
+	text-shadow: 194% 184% 11px rgba(15,14,14,0.60);
 	color: #040404;
 }
 
 #home-slides span {
-	font-size: 1.4em;
+	font-size: 2.4em;
 	font-family: 'signpainter', Helvetica, sans-serif;
 	color: #e42186;
 	text-shadow: 0 0 11px rgba(228,153,206,0.6);
