--- a/card_flip/style.css
+++ b/card_flip/style.css
@@ -1,6 +1,6 @@
 /* =================================================
-   CREATED (C) BY ALEX CICAN              APRIL 2012
-   HTTP://SICANSTUDIOS.COM
+   Artizen Studios 2014	
+  
    ================================================= */
 @font-face {
   font-family: 'WebSymbolsRegular';
@@ -12,17 +12,17 @@
 
 /* styling of the card */
 div {
-  width: 376px;
-  height: 520px; /* needs fixed height because contents inside are absolutely positioned */
-  margin: 4% auto 0;
-  text-shadow: 0 -1px 0 #444;
-  position: relative;
-  -moz-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transition: -moz-transform 1.6s;
-  -webkit-transition: -webkit-transform 1.6s;
-  -moz-perspective: 500;
-  -webkit-perspective: 500;
+	width: 480px;
+	height: 678px; /* needs fixed height because contents inside are absolutely positioned */
+	margin: 4% auto 0;
+	text-shadow: 0 -1px 0 #444;
+	position: relative;
+	-moz-transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-moz-transition: -moz-transform 1.6s;
+	-webkit-transition: -webkit-transform 1.6s;
+	-moz-perspective: 500;
+	-webkit-perspective: 500;
 }
 
 /* lighting from the top (over the image and card). Same for both sides */
@@ -92,7 +92,7 @@ div {
 .back {
   -moz-transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
-  width: 376px;
+  width: 480px;
 }
 
 /* moves the image down a bit */
@@ -124,22 +124,22 @@ div {
   -moz-box-shadow: inset 0 15px 30px rgba(255,255,255,0.1), inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 0 rgba(255,255,255,0.2);
   -webkit-box-shadow: inset 0 15px 30px rgba(255,255,255,0.1), inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 0 rgba(255,255,255,0.2);
   box-shadow: inset 0 15px 30px rgba(255,255,255,0.1), inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 0 rgba(255,255,255,0.2);
-  filter: alpha(opacity=70);
-  -moz-opacity: 0.7;
-  -khtml-opacity: 0.7;
-  opacity: 0.7;
+  filter: alpha(opacity=.3);
+  -moz-opacity: 0.3;
+  -khtml-opacity: 0.3;
+  opacity: 0.3;
 }
 
 /* styles the div that has links half of the width */
 .back .half {
-  width: 336px;
+  width: 240px;
   margin: 9px auto;
   height: 39px;
 }
 
 /* links inside this div should have half the width */
 .back .half a {
-  width: 162px;
+  width: 240px;
   display: inline-block !important;
 }
 
@@ -152,20 +152,20 @@ div {
 .back .third a {
   text-indent: 9999px;
   display: inline-block !important;
-  width: 106px;
+  width: 75px;
   margin-right: 3px;
   background: url('social_networks.png') 10px 5px no-repeat;
 }
 
 /* different social network image */
 .back .third>a:nth-child(2) {
-  background: url('social_networks.png') -108px 5px no-repeat;
+  background: url('social_networks.png') -75px 5px no-repeat;
 }
 
 /* different social network image */
 .back .third>a:nth-child(3) {
   margin-right: 0;
-  background: url('social_networks.png') -224px 5px no-repeat;
+  background: url('social_networks.png') -75px 5px no-repeat;
 }
 
 /* with jQuery adds the class and flips the card */
@@ -197,7 +197,7 @@ div {
    ================================================= */
 
 body {
-  background: url('bg.jpg');
+  background: url('midsum_background.png');
   background-attachment: fixed;
   background-position: 50% 50%;
   background-size: cover;
@@ -248,7 +248,7 @@ a:active {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 24px;
   position: absolute;
   margin: -1.55em 0 0.1em;
   padding: 5px 0;
@@ -280,10 +280,10 @@ h2 {
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
-  filter: alpha(opacity=30);
-  -moz-opacity: 0.3;
-  -khtml-opacity: 0.3;
-  opacity: 0.3;
+  filter: alpha(opacity=70);
+  -moz-opacity: 0.7;
+  -khtml-opacity: 0.7;
+  opacity: 0.7;
   text-shadow: 0 1px 0 rgba(0,0,0,0.5);
   line-height: 20px;
   font-size: 11px;
@@ -304,19 +304,21 @@ h2 {
 }
 
 footer {
-  font-weight: bold;
-  line-height: 16px;
-  margin-top: 5%;
-  color: #eee;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  transition: all 0.4s;
-  filter: alpha(opacity=50);
-  -moz-opacity: 0.5;
-  -khtml-opacity: 0.5;
-  opacity: 0.5;
+	font-weight: bold;
+	line-height: 16px;
+	margin-top: 5;
+	margin-right: px;
+	margin-bottom: 5;
+	color: #eee;
+	text-shadow: 0 1px 0 rgba(0,0,0,0.5);
+	-moz-transition: all 0.4s;
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	transition: all 0.4s;
+	filter: alpha(opacity=50);
+	-moz-opacity: 0.5;
+	-khtml-opacity: 0.5;
+	opacity: 0.5;
 }
 
 footer:hover {
