--- a/card_flip/style.css
+++ b/card_flip/style.css
@@ -71,6 +71,15 @@ div {
   box-shadow: inset 0 0 1px rgba(255,255,255,0.3), inset 0 -60px 70px rgba(0,0,0,0.2), 0 2px 7px 1px rgba(0,0,0,0.4), 0 0 25px 3px rgba(0,0,0,0.3);
 }
 
+.form {
+	color: #fff !important;
+	font-weight: bold;
+	display: float;
+	position: inherit;
+	padding-left: 275px;
+	padding-top: 175px;
+}
+
 /* the button that flips the card (same for both sides) */
 .rotate_button:after {
   font-family: 'WebSymbolsRegular';
