--- a/artizen_Site_placeholder/shader.css
+++ b/artizen_Site_placeholder/shader.css
@@ -110,6 +110,7 @@ a:focus {
 	font-size: 100%;
 	line-height: 302.2;
 	font-weight: 900;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
 }
 
 .description {
