--- a/artizen_Site_placeholder/shader.css
+++ b/artizen_Site_placeholder/shader.css
@@ -109,8 +109,9 @@ a:focus {
 	margin-bottom: 5px;
 	font-size: 100%;
 	line-height: 302.2;
-	font-weight: 900;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
+	font-weight: 400;
+	font-family: poiret-one;
+	font-style: normal;
 }
 
 .description {
