--- a/artizen_Site_placeholder/form_styles.css
+++ b/artizen_Site_placeholder/form_styles.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
 .theme-fire .form-and-links-container.col-sm-8.col-sm-offset-2 {
 	border-top: 25px;
+	width: 50%;
+	align-content: center;
+	align-self: center;
 }
