--- a/artizen_Site_placeholder/form_styles.css
+++ b/artizen_Site_placeholder/form_styles.css
@@ -10,3 +10,13 @@
 	padding-left: 25%;
 	padding-right: 25%;
 }
+.theme-fire #contact form {
+}
+.table {
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+	padding: 5px;
+	height: 60px;
+	overflow: hidden;
+	position: relative;
+	z-index: auto;
+}
